vote-app/base/quarkus-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app-svc
  labels:
    monitoring: 'true'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-app
  sessionAffinity: None
  type: ClusterIP
