vote-app/base/quarkus-app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: quarkus-app-route
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: quarkus-app-svc
    weight: 100
  wildcardPolicy: None
